[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devos-py"
version = "1.0.0"
description = "A tool to Depict Vocabulary Summaries"
readme = "README.md"
authors = [{ name = "Ahmad Alobaid", email = "aalobaid@fi.upm.es" }, { name = "Jhon Toledo"}, { name = "Oscar Corcho"}, { name = "María Poveda Villalón"}]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License"
]
keywords = ["ontology summary", "ontology diagrams", "ontology documentation"]
dependencies = [
    'tomli; python_version > "3.0"',
    "Flask==2.2.2",
    "nltk==3.7",
    "rdflib==6.2.0",
    "requests==2.28.2",
    "scikit-learn==1.2.0",
    "seaborn==0.12.1"
]
requires-python = ">=3.0"

[tool.setuptools]
packages = ["devos"]

[project.optional-dependencies]
dev = ["codecov"]

[project.urls]
Homepage = "https://github.com/oeg-upm/Devos"
